[gd_scene load_steps=10 format=2]

[ext_resource path="res://results/Result.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/resultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/buttons/playAgain.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/buttons/playAgainHover.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/buttons/quit.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/buttons/quitHover.png" type="Texture" id=6]
[ext_resource path="res://assets/music/victory.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/music/defeat.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/music/click.wav" type="AudioStream" id=9]

[node name="Result" type="Node"]

script = ExtResource( 1 )

[node name="GUI" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="resultTexture" type="TextureRect" parent="GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="resultText" type="Label" parent="GUI/resultTexture" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -144.0
margin_right = 160.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="playAgain" type="TextureButton" parent="GUI/resultTexture" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -128.0
margin_right = 192.0
margin_bottom = -64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="quit" type="TextureButton" parent="GUI/resultTexture" index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -128.0
margin_right = -64.0
margin_bottom = -64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="node2d" type="Node2D" parent="." index="1"]

[node name="victoryStream" type="AudioStreamPlayer" parent="node2d" index="0"]

stream = ExtResource( 7 )
volume_db = 5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="defeatStream" type="AudioStreamPlayer" parent="node2d" index="1"]

stream = ExtResource( 8 )
volume_db = 5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="click" type="AudioStreamPlayer" parent="node2d" index="2"]

stream = ExtResource( 9 )
volume_db = 5.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="GUI/resultTexture/playAgain" to="." method="_on_playAgain_pressed"]

[connection signal="pressed" from="GUI/resultTexture/quit" to="." method="_on_quit_pressed"]


